# simple-IMAP-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  WARP.md  docker-compose.yml  pyproject.toml
src/mcp_imap_server/: config.py  imap.py  server.py
